# energiraud-api/src/routes/api/washing_machine/+server.js
@@ -86,7 +86,7 @@
  */
 import { json } from '@sveltejs/kit';
 import { checkKey } from '$lib/utils';
-import { getAccountsPaginated, createAccount } from '$lib/models/account';
+import { getAccountsPaginated } from '$lib/models/account';
 import { checkIsPositiveInt } from '$lib/utils';
 
 export async function GET({ request, url }) {
@@ -125,114 +125,5 @@ export async function GET({ request, url }) {
   return json({
     statusCode: 200,
     data: accounts,
-  }, { status: 200 })
-}
-
-/**
- * @swagger
- * /api/accounts:
- *   post:
- *     tags:
- *       - Comptes
- *     summary: Crée un compte
- *     description: Crée un compte utilisateur
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               name:
- *                 type: string
- *               ntag:
- *                 type: string
- *     responses:
- *       200:
- *         description: Le compte a été créé avec succès
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 statusCode:
- *                   type: integer
- *                   example: 200
- *                 data:
- *                   type: object
- *                   properties:
- *                     id:
- *                       type: string
- *                     name:
- *                       type: string
- *                     ntag:
- *                       type: string
- *                     balance:
- *                       type: number
- *                     createdAt:
- *                       type: string
- *                       format: date-time
- *                     updatedAt:
- *                       type: string
- *                       format: date-time
- *                     enabled:
- *                       type: boolean
- *       400: 
- *         description: Paramètres invalides
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 statusCode:
- *                   type: integer
- *                   example: 400
- *                 error:
- *                   type: string
- *                   example: Invalid parameters
- *       401:
- *         description: Clé d'API invalide ou manquante
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 statusCode:
- *                   type: integer
- *                   example: 401
- *                 error:
- *                   type: string
- *                   example: Unauthorized
- *       500:
- *         description: Erreur interne du serveur
- */
-export async function POST({ request }) {
-  const { name, ntag } = await request.json()
-
-  console.log(name, ntag)
-
-  // CHECK KEY
-  const key = request.headers.get('Authorization')
-  if (!checkKey(key)) {
-    return json({ statusCode: 401, error: 'Unauthorized' }, { status: 401 })
-  }
-
-  // CHECK NAME
-  if (name.length < 3) {
-    return json({ statusCode: 400, error: 'Name must be at least 3 characters' }, { status: 400 })
-  }
-
-  // CHECK NTAG
-  if (ntag.length < 3) {
-    return json({ statusCode: 400, error: 'Ntag must be at least 3 characters' }, { status: 400 })
-  }
-
-  // CREATE ACCOUNT
-  const account = await createAccount(name, ntag);
-
-  // RETURN FINAL VALUES
-  return json({
-    statusCode: 200,
-    data: account,
   }, { status: 200 })
 }
